--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: multiselect_dropdown_flutter
-description: Simple multiselect dropdown.
+description: A simple multiselect dropdown with select all and search options. Works with a simple list and a list of maps.
 version: 0.0.1
 homepage: https://github.com/SanjaySodani/multiselect_dropdown_flutter
 
